# gnosis

./: .gitignore  CLAUDE.md  LICENSE  README.md  SOURCES.md  pyproject.toml
.github/workflows/: check-upstream.yml  release.yml  validate.yml
overrides/: place_matches.json  slug_overrides.json
sources/: snapshot.json
sources/dictionaries/hastings/: a.json  b.json  c.json  d.json  e.json  f.json  g.json  h.json  i.json  j.json  k.json  l.json  m.json  n.json  o.json  p.json  q.json  r.json  s.json  t.json  u.json  v.json  w.json  y.json  z.json
sources/dictionaries/hitchcock/: a.json  b.json  c.json  d.json  e.json  f.json  g.json  h.json  i.json  j.json  k.json  l.json  m.json  n.json  o.json  p.json  q.json  r.json  s.json  t.json  u.json  v.json  z.json
sources/dictionaries/schaff/: a.json  b.json  c.json  d.json  e.json  f.json  g.json  h.json  i.json  j.json  k.json  l.json  m.json  n.json  o.json  p.json  q.json  r.json  s.json  t.json  u.json  v.json  w.json  y.json  z.json
sources/dictionaries/smith/: a.json  b.json  c.json  d.json  e.json  f.json  g.json  (+18 more)
sources/supplements/: NOTES.md  events-dates.json  people-dates.json
sources/theographic/: events.json  peopleGroups.json  places.json
src/gnosis/: build.py  ids.py  osis.py  sqlite_writer.py  vector.py
tests/: test_build.py  test_cross_references.py  test_dictionaries.py  test_dodson.py  test_hebrew_lexicon.py  test_ids.py  test_macula_greek.py  test_merge.py  test_morphhb.py  test_osis.py  test_similarity.py  test_sqlite.py  test_strongs.py  test_topics.py  test_types.py  test_validate.py
(+5771 files in other folders)
