[project]
name = "gnosis"
version = "0.1.0"
description = "A curated biblical knowledge graph merging Theographic and OpenBible datasets"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.0",
    "pydantic>=2.0",
    "rapidfuzz>=3.0",
    "rich>=13.0",
]

[project.optional-dependencies]
vectors = [
    "sentence-transformers>=3.0",
    "usearch>=2.0",
]

[project.scripts]
gnosis = "gnosis.build:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gnosis"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/gnosis/osis.py" = ["E501"]  # data tables

[tool.pytest.ini_options]
testpaths = ["tests"]
